<resources>
    <string name="app_name">看见</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_login">登录</string>

    <!-- Strings related to activity_login -->
    <string name="prompt_email">请输入用户名</string>
    <string name="prompt_password">密码</string>
    <string name="confirm_password">确认密码</string>
    <!--<string name="action_sign_in">Sign in or register</string>-->
    <string name="action_sign_in_short">登录</string>
    <string name="action_register_in_short">注册</string>
    <!--  <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>-->
    <string name="getverificationcode">获取验证码</string>
    <string name="verificationcode">验证码</string>
    <string name="register">注册</string>
    <string name="forgetpassword">忘记密码？</string>
    <string name="wantregister">我要注册</string>
    <string name="login">登录</string>
    <string name="forum">社区</string>
    <string name="account">我的</string>
    <string name="username_default">未登录</string>
    <string name="recognize">识别</string>
    <string name="homepage">主页</string>

    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="refresh_all">全部加载</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载…</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="title_activity_writings">发布动态</string>
    <string name="cancel">取消</string>
    <string name="confirm">发表</string>
    <string name="take_or_picture">拍照/照片</string>
    <string name="saysomething">说点什么吧…</string>
    <string name="back">返回</string>
    <string name="forum_title">所有动态</string>
    <string name="logout">退出登录</string>

    <string name="header_hint_refresh_normal">下拉刷新</string>
    <string name="header_hint_refresh_ready">松开刷新</string>
    <string name="header_hint_refresh_loading">刷新中</string>
    <string name="header_hint_refresh_time"></string>
    <string name="footer_hint_load_normal">Load more</string>
    <string name="footer_hint_load_ready">Release to load more</string>
    <string name="userpage">个人主页</string>
    <string name="feedback">意见与反馈</string>
    <string name="feedback_content">请留下您宝贵的意见和建议,我们会努力改进的</string>
    <string name="commit_suggestions">提交反馈</string>
    <string name="contacthint">请留下联系方式，方便我们联系您(可不填)</string>
    <string name="aboutus">关于我们</string>
    <string name="personaldata">修改个人资料</string>
    <string name="modify_personaldata">编辑资料</string>
    <string name="change_avatar">点击修改</string>
    <string name="modifynickname">昵称(不超过10个字)</string>
    <string name="profession">职业</string>
    <string name="hobbies">兴趣爱好</string>
    <string name="signature">个性签名</string>
    <string name="complete">完成</string>
    <string name="modify">修改</string>
    <string name="dynamic_title">发动态</string>
    <string name="plus_one">+1</string>
    <string name="dynamicdetail">动态详情</string>
    <string name="comments_loading">正在加载评论……</string>
    <string name="hide_comments">完成</string>
    <string name="comments_detail">评论详情</string>
    <string name="comment">评论</string>
    <string name="search_from_baidu">百度百科</string>
    <string name="ourfuture">生活不止眼前的苟且\n还有诗和远方</string>
    <string name="group">分组</string>
    <string name="from">来自</string>
    <string name="blank">——</string>

    <string-array name="profession_list">
        <item>计算机/互联网/通信</item>
        <item>生产/工艺/制造</item>
        <item>医疗/护理/制药</item>
        <item>金融/银行/投资/保险</item>
        <item>商业/服务业/个性经营</item>
        <item>文化/广告/传媒</item>
        <item>娱乐/艺术/表演</item>
        <item>律师/法务</item>
        <item>教育/培训</item>
        <item>公务员/行政/事业单位</item>
        <item>模特</item>
        <item>空姐</item>
        <item>学生</item>
        <item>其他</item>
    </string-array>

    <string-array name="hobbies_list">
        <item>音乐-唱歌</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="groups">兴趣小组</string>
    <string name="networkstateprompt">网络已断开连接</string>
    <string name="send">发送</string>

    <string name="copied_to_clipboard">复制成功</string>
    <string name="copy_link">复制网址</string>
    <string name="open_with">使用浏览器打开</string>
    <string name="refresh">刷新页面</string>
    <string name="share_via">分享</string>
    <string name="selectgroup">选择分组</string>
    <string name="reply">回复</string>
    <string name="search_hint">搜索内容、用户或小组</string>
    <string name="search">搜索</string>
    <string name="clear_record">清除搜索记录</string>
    <string name="searchpage">搜索页</string>
    <string name="searchresult_user">更多用户</string>
    <string name="more">更多</string>
    <string name="searchresult_group">更多分组</string>
    <string name="searchresult_dynamic">更多动态</string>

</resources>
