<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/cancel_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:background="@android:drawable/ic_menu_close_clear_cancel"
        android:onClick="cancel_register" />

    <TextView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:background="@drawable/circle_title"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="@dimen/xxxlarge" />


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textColorHint="@color/gray_cc">

        <com.sugan.qianwei.seeyouseeworld.views.AutoComplete
            android:id="@+id/email_1"
            style="@style/InputTextStyle"
            android:hint="@string/prompt_email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textColorHint="@color/white">

            <EditText
                android:id="@+id/verificationcode_1"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/input_textview"
                android:gravity="center"
                android:hint="@string/verificationcode"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/getverificationcode_1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/input_textview"
            android:gravity="center"
            android:onClick="getverificationcode"
            android:text="@string/getverificationcode"
            android:textColor="@color/white" />
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:textColorHint="@color/gray_cc">

        <EditText
            android:id="@+id/password_1"
            style="@style/InputTextStyle"
            android:hint="@string/prompt_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:textColorHint="@color/gray_cc">

        <EditText
            android:id="@+id/confiem_password_1"
            style="@style/InputTextStyle"
            android:hint="@string/confirm_password"
            android:imeActionLabel="@string/action_register_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/button"
        android:clickable="true"
        android:gravity="center"
        android:onClick="register"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="18sp" />
</LinearLayout>
