<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_feedback"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sugan.qianwei.seeyouseeworld.activity.FeedbackActivity">
    <RelativeLayout
        android:id="@+id/userpage_titlebar"
        android:background="@color/mediumseagreen"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <TextView
            android:onClick="feedback_back"
            android:clickable="true"
            android:textSize="@dimen/large"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_marginLeft="3dp"
            android:drawableLeft="@drawable/icon_back_white"
            android:text="@string/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/feedback"
            android:textSize="@dimen/large"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <EditText
        android:id="@+id/et_suggestionsinput"
        android:layout_margin="8dp"
        android:background="@drawable/feedback_edittextstyle"
        android:minHeight="150dp"
        android:gravity="start"
        android:textSize="@dimen/normal"
        android:padding="5dp"
        android:textColorHint="@color/gray"
        android:hint="@string/feedback_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/et_contact_way"
        android:layout_margin="8dp"
        android:background="@drawable/feedback_edittextstyle"
        android:padding="5dp"
        android:minHeight="40dp"
        android:textColorHint="@color/gray"
        android:hint="@string/contacthint"
        android:textSize="@dimen/normal"
        android:singleLine="true"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/bt_sendsuggestions"
        android:onClick="sendsuggestions"
        android:text="@string/commit_suggestions"
        android:layout_margin="10dp"
        android:textColor="@color/white"
        android:clickable="false"
        android:background="@color/gray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
