<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/cancel_login"
        android:background="@android:drawable/ic_menu_close_clear_cancel"
        android:onClick="cancel_loginaction"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/circle_title"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/xxxlarge" />


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textColorHint="@color/gray_cc">

        <com.sugan.qianwei.seeyouseeworld.views.AutoComplete
            style="@style/InputTextStyle"
            android:id="@+id/email"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:textColorHint="@color/gray_cc"
        >

        <EditText
            style="@style/InputTextStyle"
            android:id="@+id/password"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="18sp" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="goToRegister"
            android:text="@string/wantregister"
            android:textColor="@color/springgreen" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/springgreen" />

        <TextView
            android:id="@+id/forgetpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="forgetpassword"
            android:text="@string/forgetpassword"
            android:textColor="@color/springgreen" />

    </LinearLayout>

</LinearLayout>
