<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context="com.sugan.qianwei.seeyouseeworld.activity.WritingsActivity">

    <RelativeLayout
        android:id="@+id/rl_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="8dp">

        <TextView
            android:id="@+id/writing_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="cancel"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textSize="@dimen/normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/dynamic_title"
            android:textColor="@color/mediumseagreen"
            android:textSize="@dimen/large" />

        <TextView
            android:id="@+id/writing_release"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:onClick="release"
            android:clickable="false"
            android:text="@string/confirm"
            android:textColor="@color/gray"
            android:textSize="@dimen/normal" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/rl_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:orientation="vertical">

        <EditText
            android:id="@+id/writing_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="top"
            android:hint="@string/saysomething"
            android:minHeight="100dp"
            android:padding="8dp"
            android:textColorHint="@color/gray"
            android:textSize="@dimen/normal" />

        <com.sugan.qianwei.seeyouseeworld.views.AutoLinefeedLayout
            android:id="@+id/writing_selectedimage_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <TextView
                android:id="@+id/writing_cameraoralbum"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@color/gray_44cc"
                android:clickable="true"
                android:drawableTop="@drawable/icon_retake"
                android:gravity="center"
                android:onClick="use_cameraoralbum"
                android:paddingTop="10dp"
                android:text="@string/take_or_picture" />

        </com.sugan.qianwei.seeyouseeworld.views.AutoLinefeedLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="8dp"
            android:background="@color/gray_44cc" />

        <RelativeLayout
            android:id="@+id/writing_selectgroup"
            android:onClick="select_group"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/select_groupname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:text="@string/selectgroup"
                android:textSize="@dimen/normal" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_alignParentRight="true"
                android:background="@drawable/icon_common_array_right" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
