<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_resetpassword"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="@drawable/background"
    tools:context="com.sugan.qianwei.seeyouseeworld.activity.ResetPasswordActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="重置密码"
        android:textColor="@color/mistyrose"
        android:textSize="@dimen/xxxlarge" />


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textColorHint="@color/white">

        <com.sugan.qianwei.seeyouseeworld.views.AutoComplete
            android:id="@+id/email_2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/input_textview"
            android:gravity="center"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textColorHint="@color/white">
            <EditText
                android:id="@+id/verificationcode_2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/input_textview"
                android:gravity="center"
                android:hint="@string/verificationcode"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/getverificationcode_2"
            android:text="@string/getverificationcode"
            android:textColor="@color/white"
            android:onClick="getverificationcode"
            android:gravity="center"
            android:background="@drawable/input_textview"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white">

        <EditText
            android:id="@+id/password_2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/input_textview"
            android:gravity="center"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white">

        <EditText
            android:id="@+id/confiem_password_2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/input_textview"
            android:gravity="center"
            android:hint="@string/confirm_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>
    <TextView
        android:id="@+id/reset"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button"
        android:clickable="true"
        android:gravity="center"
        android:text="重置"
        android:textColor="@color/white"
        android:textSize="18sp" />
</LinearLayout>
